fix container width on mobile fix #457

--- a/assets/sass/bootstrap-variables.scss
+++ b/assets/sass/bootstrap-variables.scss
@@ -138,7 +138,7 @@ $grid-breakpoints: (
 // Define the maximum width of `.container` for different screen sizes.
 
 $container-max-widths: (
-  xs: 280px,
+  xs: 410px,
   sm: 540px,
   md: 720px,
   lg: 960px,
